[tool.poetry]
name = "mongodbtest"
version = "0.1.0"
description = ""
authors = ["yingshaoxo <yingshaoxo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pymongo = "^4.0.2"
ipykernel = "^6.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
